# NUFFT_GPU

./: CMakeLists.txt  README.md  cpu_nufft.cpp  cpu_nufft.hpp  fft_helper.cu  fft_helper.cuh  gpu_nufft.cu  gpu_nufft.cuh  helper_cuda.h  main.cpp
